--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -11,23 +11,11 @@
 
     <script type="text/javascript" charset="utf-8">
         $(function () {
-            var textbox = new $.TextboxList('#form_tags_input', {
-                bitsOptions: {
-                    editable: {
-                        addKeys: [188, 32, 13]
-                    }
-                },
-                editable: true
-            });
+            var textbox = new $.TextboxList('#form_tags_input');
             textbox.add('src/**.*')
                    .add('/src/com.package.MyClass.as')
                    .add('lib/*.swc')
                    .add("/users/john/Documents/myLib/**.as")
-
-
-            $("#form_tags_input").dblclick(function(){
-                console.log("hello")
-            })
         });
     </script>
 
