--- a/src/codeOrchestra/colt/core/ui/components/logVisualizer/html/log-visualizer-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/logVisualizer/html/log-visualizer-webview.html
@@ -3,16 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <title>Log Visualizer</title>
-    <script src="../../shared/jquery.js" type="text/javascript" charset="utf-8"></script>
+    <style>
+        html, body { background: #f7f8fa; height: 100%; width: 100%; margin: 0px; overflow: hidden; }
+        canvas { display: block; }
+    </style>
 </head>
 
-<body>
+<body onload="init()" onresize="resizeCanvas()">
+    <canvas id="canvas"></canvas>
+
+    <!-- debug --
+    <img src="chart.png" style="position:absolute; top:0; left:0; opacity: 0.75;" />
+    !-- -->
+
+    <img src="legend.png" style="position:absolute; top:47px; left:12px;" />
 
 <script>
-    $(function(){
+    var context, messages = [], msPerColumn = 1000;
 
-    })
+    function resizeCanvas () {
+        var canvas = context.canvas;
+        canvas.width = window.innerWidth;
+        canvas.height = 130;
+        draw();
+    }
+
+    function init() {
+        context = document.getElementById("canvas").getContext("2d");
+
+        resizeCanvas();
+
+        setInterval(draw, 345);
+
+        alert("ready");
+    }
+
+    function currentTime () {
+        return (new Date()).getTime();
+    }
+
+    function addLogMessages (levels) {
+        // unless we quantize time, animation will have beats
+        var t = ((currentTime() / msPerColumn) | 0) * msPerColumn;
+        var m = { counts: [0, 0, 0, 0], time: t };
+        for (var i = 0, n = levels.size(); i < n; i++) {
+            switch (levels.get(i).name()) {
+                case "FATAL":
+                case "ERROR":
+                    m.counts[0]++; break;
+                case "WARN":
+                    m.counts[1]++; break;
+                case "INFO":
+                    m.counts[2]++; break;
+                case "LIVE":
+                    m.counts[3]++; break;
+            }
+        }
+        messages.unshift(m);
+        alert ("Received " + m.counts[0] + " errors, " + m.counts[1] + " warnings, " + m.counts[2] + " infos");
+    }
+
+    function draw () {
+        var W, H, now = currentTime();
+
+        // clear
+        context.clearRect(0, 0, W = context.canvas.width, H = context.canvas.height);
+
+        context.fillStyle = '#f7f8fa';
+        context.fillRect(0, 0, W, H);
+
+        // grid
+        var fillStyles = [], rows = 3; //4;
+        var grey = '#dee0e4', colors = ['#ba2b19', '#f6c930', '#2d67d0', '#009900'];
+
+        for (var c = 0, w = 35; w < W - 30; c++, w += 13) {
+
+            // find column time range
+            var tFrom = now - msPerColumn * (c + 1), tTo = now - msPerColumn * (c);
+
+            // find message counts in that range
+            var counts = [0, 0, 0, 0];
+            for (var i = 0, n = messages.length; i < n; i++) {
+                if ((messages[i].time < tTo) && (messages[i].time >= tFrom)) {
+                    for (var j = 0; j < rows; j++) {
+                        counts[j] += messages[i].counts[j];
+                    }
+                }
+            }
+
+            // select colors
+            for (var j = 0; j < rows; j++) {
+                fillStyles[j] = grey;
+                // todo: threshold
+                if (counts[j] > 0) {
+                    fillStyles[j] = colors[j];
+                }
+            }
+
+            // finally draw the column
+            for (var j = 0, h = 47; j < rows; j++, h += 13) {
+                context.fillStyle = fillStyles[j];
+                context.fillRect(w, h, 12, 12);
+            }
+        }
+
+        // ticks and numbers
+        context.fillStyle = '#8e9094';
+        context.font = "11px sans-serif";
+        context.strokeStyle = '#caccd0';
+        context.lineWidth = 1;
+        for (var w = 86.5, j = 4; w < W - 30; w += 52, j += 4) {
+            context.moveTo(w, 41);
+            context.lineTo(w, 46);
+
+            var text = "" + j * (msPerColumn / 1000);
+            context.fillText(text, w - text.length * 3, 38);
+        }
+        context.stroke();
+
+        // legend text todo: actual text
+        var legendText = "sec";
+        context.fillText(legendText, 17 - legendText.length * 3, 38);
+    }
+
 </script>
-
 </body>
 </html>
