html log in pogress

--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -30,7 +30,7 @@
     <!-- sample style -->
     <style type="text/css" media="screen">
         .form_tags {
-            margin: 0px;
+            margin: 0;
         }
 
         .textboxlist {
