--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -25,30 +25,78 @@
             textbox.add('src/**.as')
                     .add('lib/*.swc')
         });
+
+        $(function () {
+            var el = $('.textboxlist-bit-editable-input');
+            $(el).focus(function(){
+                el.parents('.textboxlist-bits').addClass('focused');
+
+                }).blur(function(){
+                el.parents('.textboxlist-bits').removeClass('focused');
+            })
+        });
     </script>
 
-    <!-- sample style -->
-    <style type="text/css" media="screen">
-        .form_tags {
-            margin: 0;
-        }
+    <style type="text/css">
+        HTML{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}
+        BUTTON,INPUT,SELECT,TEXTAREA{font-size:100%;line-height:inherit;}
+        BUTTON,INPUT,SELECT{text-transform:none;}
+        BUTTON::-moz-focus-inner,INPUT::-moz-focus-inner{border:0;padding:0;}
+        BUTTON {cursor:pointer;}
+        TEXTAREA{overflow:auto;resize:vertical;vertical-align:top;}
 
-        .textboxlist {
+        BODY {
+            margin: 4em;
+            overflow: hidden; }
+
+        /* Pseudo-input */
+        .textboxlist, INPUT[type="text"], TEXTAREA { font:13px/18px 'Lucida Grande','Lucida Sans Unicode','Lucida Sans','DejaVu Sans','Bitstream Vera Sans','Liberation Sans',Arial,sans-serif;}
+
+        .textboxlist-bits {
+            border: 1px solid #cbcfd3;
+            background: #fff;
+            -webkit-border-radius: 1px;
+            border-radius: 1px;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+            -webkit-box-shadow: inset 0 1px 0 #f0f0f0;
+            box-shadow: inset 0 1px 0 #f0f0f0;
+            padding: 1px 4px;
+            -webkit-transition: border linear .2s, box-shadow linear .2s;
+            transition: border linear .2s, box-shadow linear .2s; }
+
+        .focused {
+            border-color: #008df3;
+            -webkit-box-shadow: inset 0 1px 0 #f0f0f0, 0 0 3px #008df3;
+            box-shadow: inset 0 1px 0 #f0f0f0, 0 0 3px #008df3; }
+
+        .textboxlist-bit { margin: 0 4px 0 0; }
+
+        .textboxlist-bit-box { margin-top: 3px;}
+
+        .textboxlist-bit INPUT[type="text"],  .textboxlist-bit TEXTAREA {
+            background: transparent;
+            border: 0 none transparent;
+            margin: 0;
+            vertical-align: baseline;
             width: 100%;
-        }
+            padding: 0;
+            outline: none;
+            height: 24px; }
 
-        body {
-            margin: 0;
+        .textboxlist-bit INPUT:focus,  .textboxlist-bit TEXTAREA:focus { outline: 0; }
 
-            overflow-x: hidden;
-            overflow-y: hidden;
-        }
+        TEXTAREA { resize: vertical; }
+
+        .form_tags { margin: 0; }
+        .textboxlist { width: 100%; }
 
     </style>
 </head>
 <body>
 <form accept-charset="utf-8">
-    <div class="form_tags"><input type="text" name="test2" value="" id="form_tags_input"/></div>
+    <div class="form_tags">
+        <input type="text" name="test2" value="" id="form_tags_input"/></div>
 </form>
 </body>
 </html>
