--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -25,16 +25,6 @@
             textbox.add('src/**.as')
                     .add('lib/*.swc')
         });
-
-        $(function () {
-            var el = $('.textboxlist-bit-editable-input');
-            $(el).focus(function(){
-                el.parents('.textboxlist-bits').addClass('focused');
-
-                }).blur(function(){
-                el.parents('.textboxlist-bits').removeClass('focused');
-            })
-        });
     </script>
 
     <style type="text/css">
@@ -57,18 +47,9 @@
             background: #fff;
             -webkit-border-radius: 1px;
             border-radius: 1px;
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
             -webkit-box-shadow: inset 0 1px 0 #f0f0f0;
             box-shadow: inset 0 1px 0 #f0f0f0;
-            padding: 1px 4px;
-            -webkit-transition: border linear .2s, box-shadow linear .2s;
-            transition: border linear .2s, box-shadow linear .2s; }
-
-        .focused {
-            border-color: #008df3;
-            -webkit-box-shadow: inset 0 1px 0 #f0f0f0, 0 0 3px #008df3;
-            box-shadow: inset 0 1px 0 #f0f0f0, 0 0 3px #008df3; }
+            padding: 1px 4px; }
 
         .textboxlist-bit { margin: 0 4px 0 0; }
 
@@ -82,9 +63,7 @@
             width: 100%;
             padding: 0;
             outline: none;
-            height: 24px; }
-
-        .textboxlist-bit INPUT:focus,  .textboxlist-bit TEXTAREA:focus { outline: 0; }
+            min-height: 24px; }
 
         TEXTAREA { resize: vertical; }
 
