--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -10,25 +10,118 @@
     <script src="jquery-textboxlist.js" type="text/javascript" charset="utf-8"></script>
 
     <script type="text/javascript" charset="utf-8">
+        var textbox
         $(function () {
-            var textbox = new $.TextboxList('#form_tags_input', {
+            textbox = new $.TextboxList('#form_tags_input', {
                 setClipboard: function (src) {
-                    if(window.app){
+                    if (window.app) {
                         window.app.setClipboard(src)
                     }
                 },
                 getClipboard: function () {
-                    if(window.app){
+                    if (window.app) {
                         return window.app.getClipboard()
                     }
-                    return "hello" }});
-            textbox.add('src/**.as')
-                    .add('lib/*.swc')
-        });
+                    return "hello"
+                }});
+
+            textbox.addEvent("bitBoxAdd", function () {
+                alert("command:update")
+            })
+            textbox.addEvent("bitBoxRemove", function () {
+                alert("command:update")
+            })
+
+        })
+
+        function add(str) {
+            textbox.add(str)
+            return textbox
+        }
+
+        function getFiles() {
+            return textbox.getValues().join(", ")
+        }
+
+        function fileNotExists(file) {
+            // todo: mark file as
+        }
     </script>
 
-    <!-- sample style -->
-    <style type="text/css" media="screen">
+    <style type="text/css">
+        HTML {
+            font-size: 100%;
+            -webkit-text-size-adjust: 100%;
+            -ms-text-size-adjust: 100%;
+        }
+
+        BUTTON, INPUT, SELECT, TEXTAREA {
+            font-size: 100%;
+            line-height: inherit;
+        }
+
+        BUTTON, INPUT, SELECT {
+            text-transform: none;
+        }
+
+        BUTTON::-moz-focus-inner, INPUT::-moz-focus-inner {
+            border: 0;
+            padding: 0;
+        }
+
+        BUTTON {
+            cursor: pointer;
+        }
+
+        TEXTAREA {
+            overflow: auto;
+            resize: vertical;
+            vertical-align: top;
+        }
+
+        BODY {
+            margin: 0;
+            overflow: hidden;
+        }
+
+            /* Pseudo-input */
+        .textboxlist, INPUT[type="text"], TEXTAREA {
+            font: 13px/18px 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', 'Bitstream Vera Sans', 'Liberation Sans', Arial, sans-serif;
+        }
+
+        .textboxlist-bits {
+            border: 1px solid #cbcfd3;
+            background: #fff;
+            -webkit-border-radius: 1px;
+            border-radius: 1px;
+            -webkit-box-shadow: inset 0 1px 0 #f0f0f0;
+            box-shadow: inset 0 1px 0 #f0f0f0;
+            padding: 1px 4px;
+        }
+
+        .textboxlist-bit {
+            margin: 0 4px 0 0;
+        }
+
+        .textboxlist-bit-box {
+            margin-top: 3px;
+        }
+
+        .textboxlist-bit INPUT[type="text"], .textboxlist-bit TEXTAREA {
+            background: transparent;
+            border: 0 none transparent;
+            margin: 0;
+            vertical-align: baseline;
+            width: 100%;
+            padding: 0;
+            outline: none;
+            min-height: 24px;
+        }
+
+        TEXTAREA {
+            resize: vertical;
+        }
+
         .form_tags {
             margin: 0;
         }
@@ -37,18 +130,12 @@
             width: 100%;
         }
 
-        body {
-            margin: 0;
-
-            overflow-x: hidden;
-            overflow-y: hidden;
-        }
-
     </style>
 </head>
 <body>
 <form accept-charset="utf-8">
-    <div class="form_tags"><input type="text" name="test2" value="" id="form_tags_input"/></div>
+    <div class="form_tags">
+        <input type="text" name="test2" value="" id="form_tags_input"/></div>
 </form>
 </body>
 </html>
