try to resolve font bug

--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -22,12 +22,6 @@
                     if (window.app) {
                         return window.app.getClipboard()
                     }
-<<<<<<< HEAD
-                    return "hello" }});
-            textbox.add('src/**.as')
-                    .add('lib/*.swc')
-        });
-=======
                     return "hello"
                 }});
 
@@ -52,70 +46,49 @@
         function fileNotExists(file) {
             // todo: mark file as
         }
->>>>>>> 26533113410c717c183a5bafaab298fe21e4699e
     </script>
 
     <style type="text/css">
         HTML {
             font-size: 100%;
             -webkit-text-size-adjust: 100%;
-            -ms-text-size-adjust: 100%;
-        }
+            -ms-text-size-adjust: 100%; }
 
         BUTTON, INPUT, SELECT, TEXTAREA {
             font-size: 100%;
-            line-height: inherit;
-        }
+            line-height: inherit; }
 
         BUTTON, INPUT, SELECT {
-            text-transform: none;
-        }
+            text-transform: none; }
 
         BUTTON::-moz-focus-inner, INPUT::-moz-focus-inner {
             border: 0;
-            padding: 0;
-        }
+            padding: 0; }
 
         BUTTON {
-            cursor: pointer;
-        }
+            cursor: pointer; }
 
         TEXTAREA {
             overflow: auto;
             resize: vertical;
-            vertical-align: top;
-        }
+            vertical-align: top; }
 
         BODY {
             margin: 0;
-            overflow: hidden;
-        }
+            overflow: hidden; }
 
         .textboxlist, INPUT[type="text"], TEXTAREA {
-            font: 13px/18px 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', 'Bitstream Vera Sans', 'Liberation Sans', Arial, sans-serif;
-        }
+            font: 13px/18px 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans', 'DejaVu Sans', 'Bitstream Vera Sans', 'Liberation Sans', Arial, sans-serif; }
 
         .textboxlist-bits {
-            border: 1px solid #cbcfd3;
             background: #fff;
-            -webkit-border-radius: 1px;
-            border-radius: 1px;
             -webkit-box-shadow: inset 0 1px 0 #f0f0f0;
             box-shadow: inset 0 1px 0 #f0f0f0;
-<<<<<<< HEAD
             padding: 1px 4px; }
-=======
-            padding: 1px 4px;
-        }
 
-        .textboxlist-bit {
-            margin: 0 4px 0 0;
-        }
->>>>>>> 26533113410c717c183a5bafaab298fe21e4699e
+        .textboxlist-bit { margin: 0 4px 0 0; }
 
-        .textboxlist-bit-box {
-            margin-top: 3px;
-        }
+        .textboxlist-bit-box { margin-top: 3px; }
 
         .textboxlist-bit INPUT[type="text"], .textboxlist-bit TEXTAREA {
             background: transparent;
@@ -125,24 +98,13 @@
             width: 100%;
             padding: 0;
             outline: none;
-<<<<<<< HEAD
             min-height: 24px; }
-=======
-            min-height: 24px;
-        }
 
-        TEXTAREA {
-            resize: vertical;
-        }
->>>>>>> 26533113410c717c183a5bafaab298fe21e4699e
+        TEXTAREA { resize: vertical; }
 
-        .form_tags {
-            margin: 0;
-        }
+        .form_tags { margin: 0; }
 
-        .textboxlist {
-            width: 100%;
-        }
+        .textboxlist { width: 100%; }
 
     </style>
 </head>
