fileset input - tab index behavior fix

--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -46,6 +46,11 @@
             })
         })
 
+        function requestFocus(){
+            $(window).focus()
+            textbox.requestFocus()
+        }
+
         function add(str) {
             return textbox.add(str)
         }
