--- a/src/codeOrchestra/colt/core/ui/components/inputForms/cb_form.fxml
+++ b/src/codeOrchestra/colt/core/ui/components/inputForms/cb_form.fxml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.lang.String?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
-<?import java.lang.String?>
-<fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
-  <Label fx:id="label" text="Player Version:" AnchorPane.leftAnchor="19" AnchorPane.rightAnchor="48" />
-  <ChoiceBox fx:id="choiceBox" layoutY="22" AnchorPane.leftAnchor="10" />
-  <Label fx:id="errorLabel" layoutY="30" AnchorPane.leftAnchor="115" AnchorPane.rightAnchor="10" text="Incorrect Flex SDK path specified" styleClass="error" />
+
+<fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+  <HBox id="HBox" alignment="CENTER_LEFT" layoutY="-1.0" spacing="0.0" AnchorPane.leftAnchor="19.0">
+    <children>
+      <Label fx:id="label" text="Target player version (" />
+      <CheckBox fx:id="checkBox" prefWidth="-1.0" text="use max version" />
+      <Label text="):" />
+    </children>
+  </HBox>
+  <ChoiceBox fx:id="choiceBox" layoutY="22.0" AnchorPane.leftAnchor="10.0" />
+  <Label fx:id="errorLabel" layoutY="30.0" styleClass="error" text="Incorrect Flex SDK path specified" AnchorPane.leftAnchor="115.0" AnchorPane.rightAnchor="10.0" />
 </fx:root>
