--- a/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/index.html
+++ b/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/index.html
@@ -21,7 +21,7 @@
 
         :focus { outline: none; }
 
-        A {
+        A, A:visited {
             color: #06c;
             text-decoration: none; }
 
@@ -32,8 +32,6 @@
 
         A:hover, A:active { outline: 0 none; }
 
-        A:visited { color: #606; }
-
         A:hover {
             color: #003d7a;
             text-decoration: underline; }
@@ -41,6 +39,10 @@
         A:link { -webkit-tap-highlight-color: transparent; }
 
         B, STRONG { font: bold; }
+
+        IMG {
+            border: 0;
+            display: block; }
 
         ::-moz-selection {
             background: #06c;
@@ -113,9 +115,17 @@
         (-webkit-min-device-pixel-ratio: 1.25),
         (min-resolution: 120dpi) {
             UL:before {
-                background-image: url('icons-x2.png');
+                background-image: url(icons-x2.png);
                 -webkit-background-size: 48px 48px;
                 background-size: 48px 48px; }
+
+        [role="banner"]  {
+                background: transparent url(banner-x2.png) no-repeat;
+                -webkit-background-size: 100% 100%;
+                background-size: 100% 100%; }
+
+        [role="banner"] IMG { visibility: hidden; }
+        }
 
         }
     </style>
@@ -123,7 +133,9 @@
 
 <body>
 
-    <img src="banner.png" role="banner" alt="COLT: Code Orchestra Livecoding Tool" width="598" height="97">
+    <header role="banner">
+    <img src="banner.png" alt="COLT: Code Orchestra Livecoding Tool" width="598" height="97">
+    </header>
 
     <div role="main">
 
