--- a/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/index.html
+++ b/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/index.html
@@ -129,7 +129,7 @@
 
         <div class="col col-first">
             <ul class="m-new">
-            <li><a href="#">New ActionScript Project</a></li>
+            <li><a href="#">New ActionScript Projects</a></li>
             <li><a href="#">New JavaScript Project</a></li>
             </ul>
 
