--- a/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
+++ b/src/codeOrchestra/colt/core/ui/components/fileset/html/fileset-webview.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" charset="utf-8">
         var textbox
         var currentValue
+        var inputFromUser = true
         $(function () {
             textbox = new $.TextboxList('#form_tags_input', {
                 setClipboard: function (src) {
@@ -29,8 +30,10 @@
 
             var fireUpdate = function () {
                 if(getFiles() != currentValue){
-                    currentValue = getFiles()
-                    alert("command:update")
+                    if(inputFromUser){
+                        currentValue = getFiles()
+                        alert("command:update")
+                    }
                 }
             }
 
@@ -55,12 +58,18 @@
             textbox.requestFocus()
         }
 
-        function add(str) {
-            return textbox.add(str)
+        function addFile(str) {
+            inputFromUser = false
+            var result = textbox.add(str);
+            inputFromUser = true
+            return  result
         }
 
         function setFiles(str) {
-            return textbox.setNewValues(str)
+            inputFromUser = false
+            var newValues = textbox.setNewValues(str);
+            inputFromUser = true
+            return  newValues
         }
 
 
