--- a/src/codeOrchestra/colt/core/ui/main_gui.fxml
+++ b/src/codeOrchestra/colt/core/ui/main_gui.fxml
@@ -56,6 +56,6 @@
     </VBox>
   </left>
   <stylesheets>
-    <URL value="@../style/main.css" />
+    <URL value="@style/main.css" />
   </stylesheets>
 </fx:root>
