--- a/src/codeOrchestra/colt/core/ui/main_gui.fxml
+++ b/src/codeOrchestra/colt/core/ui/main_gui.fxml
@@ -31,14 +31,14 @@
                 <ProgressIndicator fx:id="progressIndicator" layoutX="0.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="15.0" prefWidth="15.0" visible="false" />
               </children>
             </AnchorPane>
-            <Label text="ActionScript" />
+            <Label fx:id="projectType"/>
           </children>
         </HBox>
       </bottom>
       <top>
         <HBox alignment="CENTER" prefHeight="-1.0" prefWidth="200.0" styleClass="title-bar">
           <children>
-            <Label fx:id="projectTitle" ellipsisString="…" text="Label" textAlignment="CENTER" />
+            <Label fx:id="projectTitle" ellipsisString="…" textAlignment="CENTER" />
           </children>
         </HBox>
       </top>
