fix style for button, add style for default button

--- a/src/codeOrchestra/colt/core/ui/components/advancedSeparator/advanced_separator.fxml
+++ b/src/codeOrchestra/colt/core/ui/components/advancedSeparator/advanced_separator.fxml
@@ -10,7 +10,7 @@
 <fx:root maxWidth="640" type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
   <children>
     <Button fx:id="button" focusTraversable="false" layoutY="7" prefHeight="30" text="Advanced" AnchorPane.leftAnchor="19" />
-    <Button fx:id="saveButton" focusTraversable="false" layoutY="7" prefHeight="30" prefWidth="97" styleClass="btn-done" text="Save &amp; Run" AnchorPane.rightAnchor="10" />
+    <Button fx:id="saveButton" focusTraversable="false" layoutY="7" prefHeight="30" prefWidth="97" defaultButton="true" text="Save &amp; Run" AnchorPane.rightAnchor="10" />
   </children>
   <padding>
     <Insets bottom="3" />
