--- a/src/vova/dialog-expanded-details.fxml
+++ b/src/vova/dialog-expanded-details.fxml
@@ -9,41 +9,29 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
-<VBox  minHeight="120" minWidth="540" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
-
-    <children>
-
-        <AnchorPane>
-        <children>
-            <ImageView fitHeight="48" fitWidth="48" preserveRatio="true" smooth="false" focusTraversable="true" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="0">
-            <image>
-            <Image url="@../codeOrchestra/colt/core/ui/style/images/messages/warning-48x48.png" />
-            </image>
-            </ImageView>
-            <Label text="Error while trying start the fcsh process" styleClass="h1" AnchorPane.topAnchor="17" AnchorPane.leftAnchor="69" AnchorPane.rightAnchor="0" />
-        </children>
-        </AnchorPane>
-
-        <AnchorPane>
-        <children>
-            <TextArea minHeight="-1" prefHeight="240" prefWidth="0" wrapText="true"  AnchorPane.topAnchor="17" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" />
-        </children>
-        </AnchorPane>
-
-        <AnchorPane>
-        <children>
-            <Button text="Hide details" styleClass="btn-hide-dialog" focusTraversable="true" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="0" />
-            <Button text="OK" styleClass="btn-done" defaultButton="true" focusTraversable="true" prefWidth="67" AnchorPane.topAnchor="10" AnchorPane.rightAnchor="0" />
-        </children>
-        </AnchorPane>
-
-    </children>
-
-    <padding>
-    <Insets top="17" right="30" bottom="30" left="30" />
-    </padding>
-
-    <stylesheets>
+<VBox minHeight="120.0" minWidth="540.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+  <children>
+    <AnchorPane minHeight="-Infinity">
+      <children>
+        <Label layoutX="0.0" prefWidth="411.0" styleClass="h1" text="Error while trying start the fcsh process" AnchorPane.topAnchor="0.0" />
+      </children>
+    </AnchorPane>
+    <AnchorPane>
+      <children>
+        <TextArea minHeight="-1.0" prefHeight="240.0" prefWidth="0.0" wrapText="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="17.0" />
+      </children>
+    </AnchorPane>
+    <AnchorPane>
+      <children>
+        <Button focusTraversable="true" styleClass="btn-hide-dialog" text="Hide details" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="10.0" />
+        <Button defaultButton="true" focusTraversable="true" prefWidth="67.0" styleClass="btn-done" text="OK" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0" />
+      </children>
+    </AnchorPane>
+  </children>
+  <padding>
+    <Insets bottom="30.0" left="30.0" right="30.0" top="17.0" />
+  </padding>
+  <stylesheets>
     <URL value="@../codeOrchestra/colt/core/ui/style/main.css" />
-    </stylesheets>
+  </stylesheets>
 </VBox>
