welcome screen in progress

--- a/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/welcome-screen.html
+++ b/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/welcome-screen.html
@@ -209,8 +209,8 @@
 
     <div class="col col-first">
         <ul class="m-new">
-            <li><a href="#">New ActionScript Projects</a></li>
-            <li><a href="#">New JavaScript Project</a></li>
+            <li><a href="javascript:alert('new-as')">New ActionScript Projects</a></li>
+            <li><a href="javascript:alert('new-js')">New JavaScript Project</a></li>
         </ul>
 
         <ul class="m-open">
