welcome screen finished

--- a/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/welcome-screen.html
+++ b/src/codeOrchestra/colt/core/ui/components/welcomeScreen/html/welcome-screen.html
@@ -209,13 +209,13 @@
 
     <div class="col col-first">
         <ul class="m-new">
-            <li><a href="javascript:alert('new-as')">New ActionScript Projects</a></li>
-            <li><a href="javascript:alert('new-js')">New JavaScript Project</a></li>
+            <li><a href="javascript:alert('new-as:0')">New ActionScript Projects</a></li>
+            <li><a href="javascript:alert('new-js:0')">New JavaScript Project</a></li>
         </ul>
 
         <ul class="m-open">
-            <li><a href="#">Open</a></li>
-            <li><a href="#">Open Demo Project</a></li>
+            <li><a href="javascript:alert('open:0')">Open</a></li>
+            <li><a href="javascript:alert('open-demo:0')">Open Demo Project</a></li>
             <li id="recent-projects" class="submenu-title">Open a Recent Project
                 <ul>
                     <!--<li><a href="#">Doom-iii</a></li>-->
