--- a/src/vova/popup-menu.fxml
+++ b/src/vova/popup-menu.fxml
@@ -3,53 +3,81 @@
 <?import java.lang.*?>
 <?import java.net.*?>
 <?import java.util.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 
 <AnchorPane prefHeight="400" prefWidth="600" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<children>
+    <VBox styleClass="menu-v">
     <children>
-    <Button layoutX="10" layoutY="10" text="Button" styleClass="popup-bl">
-        <contextMenu>
-        <ContextMenu>
-        <items>
-            <MenuItem text="New…" />
-            <MenuItem text="Open…" />
-            <MenuItem text="Open Recent">
-                <graphic>
-                <Label text="Select">
-                    <contextMenu>
-                    <ContextMenu>
-                    <items>
-                    <MenuItem text="File #1" />
-                    <MenuItem text="File #2" />
-                    </items>
-                    </ContextMenu>
-                    </contextMenu>
-                </Label>
-                </graphic>
-            </MenuItem>
-            <MenuItem text="Save">
-                <graphic>
-                <Label text="⌘S" />
-                </graphic>
-            </MenuItem>
-            <MenuItem text="Save As…">
-                <graphic>
-                <Label text="⇧⌘S" />
-                </graphic>
-            </MenuItem>
-        </items>
-        <stylesheets>
-        <URL value="@../codeOrchestra/colt/core/ui/style/main.css" />
-        </stylesheets>
-        </ContextMenu>
-        </contextMenu>
-    </Button>
+
+        <Button contentDisplay="GRAPHIC_ONLY" focusTraversable="false" prefWidth="220">
+        <graphic>
+        <AnchorPane>
+        <children>
+            <Label text="New…" AnchorPane.leftAnchor="0" />
+            <Label text="⌘N" AnchorPane.rightAnchor="0" />
+        </children>
+        </AnchorPane>
+        </graphic>
+        </Button>
+
+        <Button contentDisplay="GRAPHIC_ONLY" focusTraversable="false" prefWidth="220">
+        <graphic>
+        <AnchorPane>
+        <children>
+            <Label text="Open…" AnchorPane.leftAnchor="0" />
+            <Label text="⌘O" AnchorPane.rightAnchor="0" />
+        </children>
+        </AnchorPane>
+        </graphic>
+        </Button>
+
+        <Button contentDisplay="GRAPHIC_ONLY" focusTraversable="false" prefWidth="220">
+        <graphic>
+        <AnchorPane>
+        <children>
+            <Label text="Open Recent" AnchorPane.leftAnchor="0" />
+            <Label contentDisplay="GRAPHIC_ONLY" styleClass="submenu-arrow" prefHeight="12" prefWidth="9"  AnchorPane.rightAnchor="0" />
+        </children>
+        </AnchorPane>
+        </graphic>
+        </Button>
+
+        <Button contentDisplay="GRAPHIC_ONLY" focusTraversable="false" prefWidth="220">
+        <graphic>
+        <AnchorPane>
+        <children>
+            <Label text="Save" AnchorPane.leftAnchor="0" />
+            <Label text="⌘S" AnchorPane.rightAnchor="0" />
+        </children>
+        </AnchorPane>
+        </graphic>
+        </Button>
+
+        <Button contentDisplay="GRAPHIC_ONLY" focusTraversable="false" prefWidth="220">
+        <graphic>
+        <AnchorPane>
+        <children>
+            <Label text="Save As…" AnchorPane.leftAnchor="0" />
+            <Label text="⇧⌘S" AnchorPane.rightAnchor="0" />
+        </children>
+        </AnchorPane>
+        </graphic>
+        </Button>
+
     </children>
 
-    <stylesheets>
-        <URL value="@../codeOrchestra/colt/core/ui/style/main.css" />
-    </stylesheets>
+    <padding>
+    <Insets />
+    </padding>
 
+    </VBox>
+</children>
+
+    <stylesheets>
+    <URL value="@../codeOrchestra/colt/core/ui/style/main.css" />
+    </stylesheets>
 </AnchorPane>
