--- a/src/vova/popup-menu.fxml
+++ b/src/vova/popup-menu.fxml
@@ -68,6 +68,8 @@
         </graphic>
         </Button>
 
+        <Label text="Error message" styleClass="error-label" />
+
     </children>
 
     </VBox>
